[package]
name = "spl-account-compression-idl-issue"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "spl_account_compression_idl_issue"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["idl-build"] }
# spl-account-compression = { version = "0.4.0", features = ["cpi"] }
# spl-noop = { version = "0.2.0", features = ["no-entrypoint"] }
